feat: nav, hero, stats and bento layout

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,23 @@
 ---
-import Welcome from '../components/Welcome.astro';
-import Layout from '../layouts/Layout.astro';
-
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+import "../styles/global.css";
+import Layout from "../layouts/Layout.astro";
+import Hero from "../components/Hero.astro";
+import Welcome from "../components/Welcome.astro";
+import Bento from "../components/Bento/Bento.astro";
+import Services from "../components/Services.astro";
+import Footer from "../components/Footer.astro";
+import Contact from "../components/Contact.astro";
+import Navbar from "../components/Navbar.astro";
+import Stats from "../components/Stats.astro";
 ---
 
 <Layout>
+	<Navbar />
+	<Hero />
+	<Stats />
+	<Bento />
 	<Welcome />
+	<Services />
+	<Contact />
+	<Footer />
 </Layout>
