feta: new layout

--- a/src/components/Services.astro
+++ b/src/components/Services.astro
@@ -1,3 +1,90 @@
-<section class="bg-teal-500">
-    SERVICES
+<section>
+    <div
+        class="px-4 py-16 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8 lg:py-20"
+    >
+        <div
+            class="grid gap-8 row-gap-5 sm:row-gap-8 sm:grid-cols-2 lg:grid-cols-3"
+        >
+            <div>
+                <h6 class="mb-2 font-semibold leading-5">Artificial Intelligence</h6>
+                <p class="mb-3 text-sm text-gray-900">
+                    Sed ut perspiciatis unde omnis iste natus error sit
+                    voluptatem accusantium rem aperiam.
+                </p>
+                <a
+                    href="/"
+                    aria-label=""
+                    class="inline-flex items-center font-semibold transition-colors duration-200 text-deep-purple-accent-400 hover:text-deep-purple-800"
+                    >Learn more</a
+                >
+            </div>
+            <div>
+                <h6 class="mb-2 font-semibold leading-5">Mobile Apps</h6>
+                <p class="mb-3 text-sm text-gray-900">
+                    Rough pomfret lemon shark plownose chimaera southern
+                    sandfish kokanee northern sea.
+                </p>
+                <a
+                    href="/"
+                    aria-label=""
+                    class="inline-flex items-center font-semibold transition-colors duration-200 text-deep-purple-accent-400 hover:text-deep-purple-800"
+                    >Learn more</a
+                >
+            </div>
+            <div>
+                <h6 class="mb-2 font-semibold leading-5">Web Applications</h6>
+                <p class="mb-3 text-sm text-gray-900">
+                    A slice of heaven. O for awesome, this chocka full cuzzie is
+                    as rip-off as a cracker.
+                </p>
+                <a
+                    href="/"
+                    aria-label=""
+                    class="inline-flex items-center font-semibold transition-colors duration-200 text-deep-purple-accent-400 hover:text-deep-purple-800"
+                    >Learn more</a
+                >
+            </div>
+            <div>
+                <h6 class="mb-2 font-semibold leading-5">Landing Pages</h6>
+                <p class="mb-3 text-sm text-gray-900">
+                    Disrupt inspire and think tank, social entrepreneur but
+                    preliminary thinking think tank compelling.
+                </p>
+                <a
+                    href="/"
+                    aria-label=""
+                    class="inline-flex items-center font-semibold transition-colors duration-200 text-deep-purple-accent-400 hover:text-deep-purple-800"
+                    >Learn more</a
+                >
+            </div>
+            <div>
+                <h6 class="mb-2 font-semibold leading-5">Speed and Web Visibility</h6>
+                <p class="mb-3 text-sm text-gray-900">
+                    Rough pomfret lemon shark plownose chimaera southern
+                    sandfish kokanee northern sea.
+                </p>
+                <a
+                    href="/"
+                    aria-label=""
+                    class="inline-flex items-center font-semibold transition-colors duration-200 text-deep-purple-accent-400 hover:text-deep-purple-800"
+                    >Learn more</a
+                >
+            </div>
+            <div>
+                <h6 class="mb-2 font-semibold leading-5">
+                    Integrations and Automatizations
+                </h6>
+                <p class="mb-3 text-sm text-gray-900">
+                    A slice of heaven. O for awesome, this chocka full cuzzie is
+                    as rip-off as a cracker.
+                </p>
+                <a
+                    href="/"
+                    aria-label=""
+                    class="inline-flex items-center font-semibold transition-colors duration-200 text-deep-purple-accent-400 hover:text-deep-purple-800"
+                    >Learn more</a
+                >
+            </div>
+        </div>
+    </div>
 </section>
