--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,5 +1,9 @@
+---
+import Button from "../shared/Button.astro";
+---
+
 <section
-  class="mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl"
+  class="py-20 bg-slate-700"
 >
   <div class="max-w-xl sm:mx-auto lg:max-w-2xl">
     <div class="flex flex-col mb-16 sm:text-center sm:mb-0">
@@ -7,23 +11,20 @@
         class="max-w-xl mb-10 md:mx-auto sm:text-center lg:max-w-2xl md:mb-12"
       >
         <h1
-          class="max-w-lg mb-6 font-sans text-4xl font-bold leading-none tracking-tight text-gray-900 sm:text-4xl md:mx-auto"
+          class="max-w-lg mb-6 font-sans text-4xl font-bold leading-none tracking-tight text-white sm:text-5xl md:mx-auto"
         >
           Transforming Your Business with Cutting-Edge Technology
         </h1>
-        <p class="text-base text-gray-700 md:text-lg">
+        <p class="text-base text-gray-50 md:text-lg">
           Unlock the potential of your organization with our innovative
           technology solutions. Partner with us to streamline processes, enhance
           productivity, and drive growth.
         </p>
       </div>
       <div>
-        <a
-          href="/"
-          class="inline-flex items-center justify-center h-12 px-6 font-medium tracking-wide text-gray-900 transition duration-200 rounded shadow-md border border-amber-800 hover:bg-amber-900 hover:shadow-amber-800/50 hover:text-white focus:shadow-outline focus:outline-none"
-        >
-          Ver más
-        </a>
+        <Button title="Ver más" linkTo="services">
+
+        </Button>
       </div>
     </div>
   </div>
