--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,81 +1,82 @@
-<div
+---
+import StrokedButton from "../shared/StrokedButton.astro";
+---
+
+<div class="bg-slate-700">
+
+  <div
   class="px-4 py-5 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8"
->
+  >
   <div class="relative flex items-center justify-between">
     <a
-      href="/"
-      aria-label="Apsodi logo"
-      title="Apsodi logo"
-      class="inline-flex items-center"
+    href="/"
+    aria-label="Apsodi logo"
+    title="Apsodi logo"
+    class="inline-flex items-center"
     >
-      LOGO
-    </a>
-    <ul class="hidden items-center space-x-8 lg:flex">
-      <li>
-        <a
-          href="/services"
-          aria-label="Services"
-          title="Services"
-          class="font-medium tracking-wide text-gray-700 transition-colors duration-200 hover:text-amber-800"
-          >Services</a>
-      </li>
-      <li>
+    LOGO
+  </a>
+  <ul class="hidden items-center space-x-8 lg:flex">
+    <li>
+      <a
+      href="/services"
+      aria-label="Services"
+      title="Services"
+      class="font-medium tracking-wide text-white transition-colors duration-200 hover:text-gray-300"
+      >Services</a>
+    </li>
+    <li>
         <a
           href="/clients"
           aria-label="Clients"
           title="Clients"
-          class="font-medium tracking-wide text-gray-700 transition-colors duration-200 hover:text-amber-800"
+          class="font-medium tracking-wide text-white transition-colors duration-200 hover:text-gray-300"
           >Clients</a>
+        </li>
+        <li>
+        <a
+        href="/technologies"
+        aria-label="Technologies"
+        title="Technologies"
+        class="font-medium tracking-wide text-white transition-colors duration-200 hover:text-gray-300"
+        >Technologies</a>
       </li>
       <li>
         <a
-          href="/technologies"
-          aria-label="Technologies"
-          title="Technologies"
-          class="font-medium tracking-wide text-gray-700 transition-colors duration-200 hover:text-amber-800"
-          >Technologies</a>
+        href="/about"
+        aria-label="About"
+        title="About"
+        class="font-medium tracking-wide text-white transition-colors duration-200 hover:text-gray-300"
+        >About</a>
       </li>
       <li>
-        <a
-          href="/about"
-          aria-label="About"
-          title="About"
-          class="font-medium tracking-wide text-gray-700 transition-colors duration-200 hover:text-amber-800"
-          >About</a>
-      </li>
-      <li>
-        <a
-          href="/contacto"
-          class="inline-flex items-center justify-center h-12 px-6 font-medium tracking-wide text-white transition duration-200 rounded shadow-md bg-amber-800 hover:bg-amber-900 focus:shadow-outline focus:outline-none"
-          aria-label="Contact Us"
-          title="Contact Us"
-        >
-          Contact Us
-        </a>
+        <StrokedButton title="Contact Us" linkTo="contact"/>
       </li>
     </ul>
     <!-- Mobile menu -->
     <div class="lg:hidden">
       <button
-        aria-label="Open Menu"
-        title="Open Menu"
-        class="p-2 -mr-1 transition duration-200 rounded focus:outline-none focus:shadow-outline hover:bg-amber-100 focus:bg-amber-100"
+      aria-label="Open Menu"
+      title="Open Menu"
+      class="p-2 -mr-1 transition duration-200 rounded focus:outline-none focus:shadow-outline hover:bg-amber-100 focus:bg-amber-100"
       >
-        <svg class="w-5 text-gray-600" viewBox="0 0 24 24">
-          <path
-            fill="currentColor"
-            d="M23,13H1c-0.6,0-1-0.4-1-1s0.4-1,1-1h22c0.6,0,1,0.4,1,1S23.6,13,23,13z"
-          ></path>
-          <path
-            fill="currentColor"
-            d="M23,6H1C0.4,6,0,5.6,0,5s0.4-1,1-1h22c0.6,0,1,0.4,1,1S23.6,6,23,6z"
-          ></path>
-          <path
-            fill="currentColor"
-            d="M23,20H1c-0.6,0-1-0.4-1-1s0.4-1,1-1h22c0.6,0,1,0.4,1,1S23.6,20,23,20z"
-          ></path>
-        </svg>
-      </button>
-    </div>
+      <svg class="w-5 text-gray-600" viewBox="0 0 24 24">
+        <path
+        fill="currentColor"
+        d="M23,13H1c-0.6,0-1-0.4-1-1s0.4-1,1-1h22c0.6,0,1,0.4,1,1S23.6,13,23,13z"
+        ></path>
+        <path
+        fill="currentColor"
+        d="M23,6H1C0.4,6,0,5.6,0,5s0.4-1,1-1h22c0.6,0,1,0.4,1,1S23.6,6,23,6z"
+        ></path>
+        <path
+        fill="currentColor"
+        d="M23,20H1c-0.6,0-1-0.4-1-1s0.4-1,1-1h22c0.6,0,1,0.4,1,1S23.6,20,23,20z"
+        ></path>
+      </svg>
+    </button>
   </div>
+</div>
+</div>
+
 </div>
