--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,9 +1,8 @@
 ---
-import StrokedButton from "../shared/StrokedButton.astro";
+
 ---
 
-<div class="bg-slate-700">
-
+<div class="sticky top-0 bg-slate-700">
   <div
   class="px-4 py-5 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8"
   >
@@ -50,7 +49,10 @@ import StrokedButton from "../shared/StrokedButton.astro";
         >About</a>
       </li>
       <li>
-        <StrokedButton title="Contact Us" linkTo="contact"/>
+        <button type="button" class="inline-flex items-center justify-center h-12 px-6 font-medium tracking-wide text-white transition duration-200 rounded shadow-md bg-amber-400 hover:bg-amber-800 focus:shadow-outline focus:outline-none cursor-pointer"
+        >
+          Contact us
+        </button>
       </li>
     </ul>
     <!-- Mobile menu -->
