--- a/src/components/Services.astro
+++ b/src/components/Services.astro
@@ -2,11 +2,28 @@
     <div
         class="px-4 py-16 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8 lg:py-20"
     >
+        <div class="max-w-xl mb-10 sm:mx-auto">
+            <h2
+                class="font-sans text-3xl font-bold leading-tight tracking-tight text-gray-900 sm:text-4xl sm:text-center"
+            >
+                The quick, brown fox jumps over and over
+                <span class="inline-block text-amber-500"
+                    >a lazy dog</span
+                >
+            </h2>
+        </div>
         <div
             class="grid gap-8 row-gap-5 sm:row-gap-8 sm:grid-cols-2 lg:grid-cols-3"
         >
             <div>
-                <h6 class="mb-2 font-semibold leading-5">Artificial Intelligence</h6>
+                <div class="flex items-center justify-center w-10 h-10 mb-3 rounded-full bg-indigo-50">
+                    <svg class="w-8 h-8 text-deep-purple-accent-400" stroke="currentColor" viewBox="0 0 52 52">
+                      <polygon stroke-width="3" stroke-linecap="round" stroke-linejoin="round" fill="none" points="29 13 14 29 25 29 23 39 38 23 27 23"></polygon>
+                    </svg>
+                  </div>
+                <h6 class="mb-2 font-semibold leading-5">
+                    Artificial Intelligence
+                </h6>
                 <p class="mb-3 text-sm text-gray-900">
                     Sed ut perspiciatis unde omnis iste natus error sit
                     voluptatem accusantium rem aperiam.
@@ -14,11 +31,16 @@
                 <a
                     href="/"
                     aria-label=""
-                    class="inline-flex items-center font-semibold transition-colors duration-200 text-deep-purple-accent-400 hover:text-deep-purple-800"
-                    >Learn more</a
+                    class="inline-flex items-center font-semibold transition-colors duration-200 text-amber-400 hover:text-amber-600 hover:underline"
+                    >Learn more...</a
                 >
             </div>
             <div>
+                <div class="flex items-center justify-center w-10 h-10 mb-3 rounded-full bg-indigo-50">
+                    <svg class="w-8 h-8 text-deep-purple-accent-400" stroke="currentColor" viewBox="0 0 52 52">
+                      <polygon stroke-width="3" stroke-linecap="round" stroke-linejoin="round" fill="none" points="29 13 14 29 25 29 23 39 38 23 27 23"></polygon>
+                    </svg>
+                  </div>
                 <h6 class="mb-2 font-semibold leading-5">Mobile Apps</h6>
                 <p class="mb-3 text-sm text-gray-900">
                     Rough pomfret lemon shark plownose chimaera southern
@@ -27,11 +49,16 @@
                 <a
                     href="/"
                     aria-label=""
-                    class="inline-flex items-center font-semibold transition-colors duration-200 text-deep-purple-accent-400 hover:text-deep-purple-800"
-                    >Learn more</a
+                    class="inline-flex items-center font-semibold transition-colors duration-200 text-amber-400 hover:text-amber-600 hover:underline"
+                    >Learn more...</a
                 >
             </div>
             <div>
+                <div class="flex items-center justify-center w-10 h-10 mb-3 rounded-full bg-indigo-50">
+                    <svg class="w-8 h-8 text-deep-purple-accent-400" stroke="currentColor" viewBox="0 0 52 52">
+                      <polygon stroke-width="3" stroke-linecap="round" stroke-linejoin="round" fill="none" points="29 13 14 29 25 29 23 39 38 23 27 23"></polygon>
+                    </svg>
+                  </div>
                 <h6 class="mb-2 font-semibold leading-5">Web Applications</h6>
                 <p class="mb-3 text-sm text-gray-900">
                     A slice of heaven. O for awesome, this chocka full cuzzie is
@@ -40,11 +67,16 @@
                 <a
                     href="/"
                     aria-label=""
-                    class="inline-flex items-center font-semibold transition-colors duration-200 text-deep-purple-accent-400 hover:text-deep-purple-800"
-                    >Learn more</a
+                    class="inline-flex items-center font-semibold transition-colors duration-200 text-amber-400 hover:text-amber-600 hover:underline"
+                    >Learn more...</a
                 >
             </div>
             <div>
+                <div class="flex items-center justify-center w-10 h-10 mb-3 rounded-full bg-indigo-50">
+                    <svg class="w-8 h-8 text-deep-purple-accent-400" stroke="currentColor" viewBox="0 0 52 52">
+                      <polygon stroke-width="3" stroke-linecap="round" stroke-linejoin="round" fill="none" points="29 13 14 29 25 29 23 39 38 23 27 23"></polygon>
+                    </svg>
+                  </div>
                 <h6 class="mb-2 font-semibold leading-5">Landing Pages</h6>
                 <p class="mb-3 text-sm text-gray-900">
                     Disrupt inspire and think tank, social entrepreneur but
@@ -53,12 +85,19 @@
                 <a
                     href="/"
                     aria-label=""
-                    class="inline-flex items-center font-semibold transition-colors duration-200 text-deep-purple-accent-400 hover:text-deep-purple-800"
-                    >Learn more</a
+                    class="inline-flex items-center font-semibold transition-colors duration-200 text-amber-400 hover:text-amber-600 hover:underline"
+                    >Learn more...</a
                 >
             </div>
             <div>
-                <h6 class="mb-2 font-semibold leading-5">Speed and Web Visibility</h6>
+                <div class="flex items-center justify-center w-10 h-10 mb-3 rounded-full bg-indigo-50">
+                    <svg class="w-8 h-8 text-deep-purple-accent-400" stroke="currentColor" viewBox="0 0 52 52">
+                      <polygon stroke-width="3" stroke-linecap="round" stroke-linejoin="round" fill="none" points="29 13 14 29 25 29 23 39 38 23 27 23"></polygon>
+                    </svg>
+                  </div>
+                <h6 class="mb-2 font-semibold leading-5">
+                    Speed and Web Visibility
+                </h6>
                 <p class="mb-3 text-sm text-gray-900">
                     Rough pomfret lemon shark plownose chimaera southern
                     sandfish kokanee northern sea.
@@ -66,11 +105,16 @@
                 <a
                     href="/"
                     aria-label=""
-                    class="inline-flex items-center font-semibold transition-colors duration-200 text-deep-purple-accent-400 hover:text-deep-purple-800"
-                    >Learn more</a
+                    class="inline-flex items-center font-semibold transition-colors duration-200 text-amber-400 hover:text-amber-600 hover:underline"
+                    >Learn more...</a
                 >
             </div>
             <div>
+                <div class="flex items-center justify-center w-10 h-10 mb-3 rounded-full bg-indigo-50">
+                    <svg class="w-8 h-8 text-deep-purple-accent-400" stroke="currentColor" viewBox="0 0 52 52">
+                      <polygon stroke-width="3" stroke-linecap="round" stroke-linejoin="round" fill="none" points="29 13 14 29 25 29 23 39 38 23 27 23"></polygon>
+                    </svg>
+                  </div>
                 <h6 class="mb-2 font-semibold leading-5">
                     Integrations and Automatizations
                 </h6>
@@ -81,8 +125,8 @@
                 <a
                     href="/"
                     aria-label=""
-                    class="inline-flex items-center font-semibold transition-colors duration-200 text-deep-purple-accent-400 hover:text-deep-purple-800"
-                    >Learn more</a
+                    class="inline-flex items-center font-semibold transition-colors duration-200 text-amber-400 hover:text-amber-600 hover:underline"
+                    >Learn more...</a
                 >
             </div>
         </div>
