--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,19 +1,26 @@
 ---
+import { ClientRouter } from "astro:transitions";
 import Footer from "../components/Footer.astro";
 import Navbar from "../components/Navbar.astro";
+import { fade } from 'astro:transitions';
 ---
 
 <!doctype html>
-<html lang="en">
+<html lang="en" transition:name="root" transition:animate="none">
 	<head>
+		<ClientRouter />
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<title>APSODI</title>
 	</head>
-	<body>
+	<body transition:animate={fade({ duration: "0.6s" })}>
+	<header>
 		<Navbar />
+	</header>
+	<main>
 		<slot />
 		<Footer />
+	</main>
 	</body>
 </html>
