--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -1,1 +1,11 @@
-<p>hola</p>
+---
+import "../styles/global.css";
+import Hero from "../components/Hero.astro";
+import Layout from "../layouts/Layout.astro";
+import { SERVICE_DESCRIPTION, SERVICE_TITLE } from "../_core/constants/hero.const";
+---
+
+<Layout>
+	<Hero title=`${SERVICE_TITLE}` description=`${SERVICE_DESCRIPTION}`/>
+
+</Layout>
