feat: Cambios de Hero y Service title

--- a/src/components/Services.astro
+++ b/src/components/Services.astro
@@ -6,9 +6,9 @@
             <h2
                 class="font-sans text-3xl font-bold leading-tight tracking-tight text-gray-900 sm:text-4xl sm:text-center"
             >
-                The quick, brown fox jumps over and over
+                Tecnología con propósito
                 <span class="inline-block text-amber-500"
-                    >a lazy dog</span
+                    >transforma, evoluciona, crece.</span
                 >
             </h2>
         </div>
